# wikidata-transport-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
data/: schema.json
metro/: __init__.py  __main__.py
metro/core/: __init__.py  data.py  line.py  named.py  network.py  serialization.py  station.py  system.py
metro/geometry/: __init__.py  geo.py
metro/harvest/: __init__.py  wikidata.py
tests/: test_data.py  test_wikidata.py
