[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metro"
version = "0.1.0"
description = "Python Wikidata transport system parser"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.5",
    "urllib3~=1.26.12",
    "jsonschema>=4.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.4",
    "ruff~=0.4.2",
]

[project.urls]
Homepage = "https://github.com/enzet/wikidata-transport-parser"
Documentation = "https://github.com/enzet/wikidata-transport-parser#readme"
"Bug Tracker" = "https://github.com/enzet/wikidata-transport-parser/issues"

[project.scripts]
metro = "metro.__main__:main"

[tool.setuptools]
packages = ["metro", "metro.core", "metro.geometry", "metro.harvest"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "ANN101",  # Rule is deleted, type of `self` can be inferred.
    "ANN102",  # Type of `self` can be inferred.
    "C901",  # Too complex functions are allowed.
    "COM812",  # Trailing comma not in Black style.
    "D105",  # Missing docstring in magic method is allowed.
    "D107",  # Missing docstring in `__init__` method is allowed.
    "D202",  # No blank line after function docstring is allowed.
    "D203",  # Blank line is not required before class docstring.
    "D213",  # New line after """ is not needed.
    "FIX002",  # Todo markers are allowed.
    "PLR0911",  # Too many return statements are allowed.
    "PLR0912",  # Too many branches are allowed.
    "PLR0913",  # Too many arguments are allowed.
    "PLR0915",  # Too many statements are allowed.
    "RUF001",  # Ambiguous symbols are allowed.
    "S101",  # Asserts are allowed in tests.
    "TD003",  # Issues for todos are not required.
]

# Allow autofix for all enabled rules (when `--fix` is used).
lint.fixable = ["ALL"]
lint.unfixable = []

line-length = 80
